# ClaSH

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  history.txt
src/: main.rs
src/cli/: mod.rs  projects.rs  resume.rs
src/completer/: mod.rs
